@@ -54,7 +54,8 @@ dnl = AC_INIT([ATS/Anairiats], [0.2.1], [hwxi@cs.bu.edu])
 dnl = AC_INIT([ATS/Anairiats], [0.2.2], [hwxi@cs.bu.edu])
 dnl = AC_INIT([ATS/Anairiats], [0.2.3], [hwxi@cs.bu.edu])
 dnl = AC_INIT([ATS/Anairiats], [0.2.4], [hwxi@cs.bu.edu])
-AC_INIT([ATS/Anairiats], [0.2.5], [hwxi@cs.bu.edu])
+dnl = AC_INIT([ATS/Anairiats], [0.2.5], [hwxi@cs.bu.edu])
+AC_INIT([ATS/Anairiats], [0.2.6], [hwxi@cs.bu.edu])
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_FILES([config.mk])
