@@ -36,14 +36,13 @@
 <HR SIZE=6 ALIGN=LEFT><P>
 
 
-<A
-HREF="http://ats-lang.svn.sourceforge.net/viewvc/ats-lang/trunk"><B>ATS/Anairiats</B></A>
+<A HREF="http://ats-lang.svn.sourceforge.net/viewvc/ats-lang/trunk"><B>ATS/Anairiats</B></A>
 is the currently released implementation of ATS. ATS/Anairiats is written
-in ATS itself, consisting of more than 90,000 lines of <A
-HREF="ATSOPT/ATSOPT.html">source code</A>.  When compared to ATS/Geizella,
-a previous implementation of ATS, ATS/Anairiats is significantly more
-efficient, and in general it issues more informative messages for
-identifying program errors.
+in ATS itself, consisting of nearly 100,000 lines
+of <A HREF="ATSOPT/ATSOPT.html">source code</A>.  When compared to
+ATS/Geizella, a previous implementation of ATS, ATS/Anairiats is
+significantly more efficient, and in general it issues more informative
+messages for identifying program errors.
 <P>
 
 <B>Bootstrapping via gcc</B>&nbsp;
@@ -95,7 +94,7 @@ After this is done, please go into the directory "FOO" and then execute
 'make all-geizella'.
 <P>
 
-<HR SIZE=2 ALIGN=LEFT COLOR="000000"><P>
+<hr size=2 align=left color="000000"><p>
 
 <A
 HREF="http://ats-lang.svn.sourceforge.net/viewvc/ats-lang/bootstrap/geizella"><B>ATS/Geizella</B></A>
@@ -108,9 +107,9 @@ ATS/Geizella through the use of templates.  ATS/Geizella is now largely out
 of active use as ATS/Anairiats, a compiler for ATS that is almost entirely
 written in ATS, has been bootstrapped successfully (with the help of
 ATS/Geizella).
-<P>
+<p>
 
-<HR SIZE=2 ALIGN=LEFT COLOR="000000"><P>
+<hr size=2 align=left color="000000"><p>
 
 <A HREF="Proto/"><B>ATS/Proto</B></A> is the first implementation of ATS.  In this
 implementation, the standard boxed data representation is used to support
