@@ -203,7 +203,7 @@ ATS (for supporting programming with theorem-proving). In particular, it
 demonstrates, with interesting examples, an approach to theorem proving
 that represents proofs as total functions.  The paper is especially
 important for people interested in using ATS/LF as a logical framework to
-encod deduction systems as well as to reason about their (meta-)properties.
+encode deduction systems as well as to reason about their (meta-)properties.
 <P>
 
 <LI><B>A Formalization of Strong Normalization for Simply Typed Lambda-Calculus and System F</B>
