@@ -161,6 +161,7 @@ BU CAS CS 520:
 Many advanced features (e.g., dependent types, linear types) of ATS are
 presented in this graduate-level course
 <UL>
+<LI><A href="http://www.cs.bu.edu/~hwxi/academic/courses/Fall11/CS520.html">Fall'11</A>
 <LI><A href="http://www.cs.bu.edu/~hwxi/academic/courses/Fall10/CS520.html">Fall'10</A>
 <LI><A href="http://www.cs.bu.edu/~hwxi/academic/courses/Fall09/CS520.html">Fall'09</A>
 <LI><A href="http://www.cs.bu.edu/~hwxi/academic/courses/Fall08/CS520.html">Fall'08</A>
