@@ -42,7 +42,7 @@
 
 #define ATS_MAJOR_VERSION 0
 #define ATS_MINOR_VERSION 2
-#define ATS_MICRO_VERSION 5
+#define ATS_MICRO_VERSION 6
 
 (* ****** ****** *)
 
