@@ -62,6 +62,7 @@ padding-right: 10px ;
 #litxt(#ulink("\#TUTORIALATSbook", "A Tutorial on Programming Features in ATS"))
 #lisub("ATS Utility Commands")
 #lisub("The Formal Grammar of ATS/Anairiats")
+#litxt(#ulink("\#ATSCAIRObook", "ATS/Cairo Tutorial"))
 ')#comment("menu")
 
 #HR(2)
@@ -74,12 +75,12 @@ This book starts from the core of ATS, a statically typed call-by-value
 functional programming language, and introduces the reader to dependent
 types, linear types and the paradigm of programming with theorem-proving.
 It assumes no familiarity of the reader with functional programming.
-</tr></td>
+</td></tr>
 <tr><td>
 Links:
 #ulink1("#ATSLANGWEBROOTget()/DOCUMENT/INTPROGINATS/HTML/book1.html", "html")
 #ulink1("#ATSLANGWEBROOTget()/DOCUMENT/INTPROGINATS/PDF/main.pdf", "pdf")
-</tr></td>
+</td></tr>
 </table>
 #para("")
 
@@ -96,14 +97,18 @@ construction of high-quality programs. For someone familiar with both ML
 and C, it is possible to learn programming in ATS by simply studying the
 tutorial. However, a coherent and systematic view of ATS is diffcult to be
 gained from the tuorial alone.
-</tr></td>
+</td></tr>
 <tr><td>
 Links:
 #ulink1("#ATSLANGWEBROOTget()/DOCUMENT/TUTORIALATS/HTML/book1.html", "html")
 #ulink1("#ATSLANGWEBROOTget()/DOCUMENT/TUTORIALATS/PDF/main.pdf", "pdf")
-</tr></td>
+</td></tr>
 </table>
 #para("")
+
+#HR(1)
+
+<h2>#uid("ATSCAIRObook", "ATS/Cairo Tutorial")</h2>
 
 <!-- ****** ****** -->
 
