@@ -1,5 +1,11 @@
 ########################################################################
 
+ats-lang-anairiats-0.2.6:
+
+1. Adding contrib/JNI for interface ATS and Java.
+
+########################################################################
+
 ats-lang-anairiats-0.2.5:
 
 1. Fixing a bug in handling call-by-reference. I was really surprised that
@@ -23,13 +29,14 @@ ats-lang-anairiats-0.2.5:
 12. Adding contrib/GLES2 to support OpenGL/ES2 binding. Thanks to Artyom!
 13. Renaming: list_vt_*_clo -> list_vt_*_vclo. Also adding various functions:
     list_vt_*_cloptr and list_vt_*_vcloptr
-14. Makefile_macosx is added for building ATS on MAC OS X.
+14. Makefile_macosx is added for building ATS on MAC OS X. Thanks to Georg!
 15. Renaming (in various packages): *_clo -> *_vclo and *_cloptr -> *_vcloptr
 16. Adding libatsdoc.
 17. Adding the [atsdoc] utility for writing documents
 18. Adding atsdoc/DOCUMENT/TUTORIALATS
 19. Finishing part 3 of the book on Introduction to Programming in ATS
 20. Adding contrib/atswebpage for helping build web pages
+21. Adding util/atsdoc/DOCUMENT/atslangweb for creating webpages for ATS
 
 `########################################################################
 
